<resources>
    <string name="app_name">Dogger</string>
    <string name="sAbout">About</string>
    <string name="sPrincipal">Home</string>
    <string name="sMap">Map</string>

    <string name="sDogger">Dogger</string>
    <string name="sSlogan">The real american taste</string>

    <string name="sAdd">Add</string>
    <string name="sEdit">Edit</string>
    <string name="sRemove">Remove</string>
    <string name="sRefresh">Refresh</string>
    <string name="sAboutInfo">Programed by:\nLuis David Goyes Garcés.\nluis.goyes@udea.edu.co\nElectronic Engineering Student\nUniversidad de Antioquia</string>
    <string name="sOk">Ok</string>

    <string name="sAddTitulo">Add new franchise</string>
    <string name="sAddNome">New Franchise Name</string>
    <string name="sAddNomeHint">Type here the name</string>
    <string name="sAddLatitude">Franchise\'s Latitude</string>
    <string name="sAddLatitudeHint">Type here the latitude</string>
    <string name="sAddLongitude">Franchise\'s Longitude</string>
    <string name="sAddLongitudeHint">Type here the longitude</string>
    <string name="sCancel">Cancel</string>
    <string name="tetAddLong">Insert Longitude value</string>
    <string name="tetAddLat">Insert Latitude value</string>
    <string name="tetAddNome">Insert Franchise\'s Name</string>
    <string name="tsearchAddName">This Franchise Name has already been given.</string>
    <string name="tsearchAddLocation">There\'s another Franchise at this exact Location</string>
    <string name="tAddSuccess">Franchise successfully added. Please, reload map</string>
    <string name="tRefresh">Map successfully Reloaded!</string>
    <string name="sRemoveTitulo">Remove Franchises</string>
    <string name="tRemoveSuccess">Franchise successfully removed. Please, reload map</string>
    <string name="sEditTitulo">Edit Franchises</string>
    <string name="sEditFTitulo">Edit Franchise</string>
    <string name="tEditSuccess">Franchise Successfully Edited</string>
    <string name="sAskSelect">No franchise selected. Please, select one from the list!</string>

</resources>
