<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/iPrincipal"
        android:title="@string/sPrincipal"
        android:orderInCategory="0"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_back"
        />

    <item
        android:id="@+id/iMap"
        android:title="@string/sMap"
        android:orderInCategory="0"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_place"
        />

    <item
        android:id="@+id/iAbout"
        android:title="@string/sAbout"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_about"/>

</menu>
